Fix break in middle

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,6 @@ aside {
 section {
   background-color: #F3F6F7;
   column-count: 3;
-  column-width: 13em;
   padding: 15px;
   width: 75%;
 }
@@ -183,7 +182,7 @@ li {
   background-color: #FAFDFF;
   border: 3px solid #C7D3D8;
   break-inside: avoid;
-  margin: 5px auto;
+  margin-bottom: 20px;
   padding: 2px;
   width: 95%;
 }
